Load the dataset from the GitHub repository and include the `nrows` parameter in the loader function.

--- a/text_aspect_generation_.ipynb
+++ b/text_aspect_generation_.ipynb
@@ -236,16 +236,17 @@
       "outputs": [],
       "source": [
         "class DatasetLoader:\n",
-        "    def __init__(self, *, file_path: str):\n",
+        "    def __init__(self, *, file_path: str, nrows= 100):\n",
         "        self.file_path: str = file_path\n",
         "        self._data: Optional[pd.DataFrame] = None\n",
+        "        self.nrows= nrows\n",
         "\n",
         "    def loader(self) -> pd.DataFrame:\n",
         "        if not os.path.exists(self.file_path):\n",
         "            logging.error(f\"File not found: {self.file_path}\")\n",
         "            raise FileNotFoundError(f\"File not found: {self.file_path}\")\n",
         "        try:\n",
-        "            self._data = pd.read_csv(self.file_path)\n",
+        "            self._data = pd.read_csv(self.file_path, nrows= self.nrows)\n",
         "            logging.info(\"Data loaded successfully.\")\n",
         "        except Exception as e:\n",
         "            logging.error(f\"Error loading data: {e}\")\n",
@@ -482,8 +483,10 @@
       ],
       "source": [
         "if __name__ == \"__main__\":\n",
-        "    file_path= '/content/drive/MyDrive/Projects/Sentiment_Analysis/aspect_generation/Augmented_dataset_US_airline_Tweet.csv'\n",
-        "    loader= DatasetLoader(file_path= file_path)\n",
+        "    !git clone 'https://github.com/HoseinNekouei/sentiment_analysis.git'\n",
+        "    file_path= '/content/drive/sentiment_analysis/balanced_dataset_US_airline_Tweet.csv'\n",
+        "\n",
+        "    loader= DatasetLoader(file_path= file_path, nrows= 10)\n",
         "    loader() # Load, visualize, map classes, and preprocess data\n",
         "    print(loader)\n",
         "\n",
