Implement ROC_AUC Curve and f1-measure

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPVk9zTkC5p8jmIJNSerGlz",
+      "authorship_tag": "ABX9TyNSHK9k9DTY/B9THYcMakcU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,11 +34,11 @@
         "import math\n",
         "import torch\n",
         "import pandas as pd\n",
-        "from torch.optim import AdamW\n",
         "from google.colab import userdata\n",
         "from torch.utils.data import DataLoader, TensorDataset\n",
         "from sklearn.model_selection import KFold\n",
-        "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+        "from sklearn.metrics import roc_curve, auc\n",
+        "from transformers import AutoTokenizer, AutoModelForSequenceClassification, AdamW\n",
         "\n",
         "userdata.get('HF_TOKEN')\n",
         "\n",
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,15 +129,69 @@
         "        self.model.eval()\n",
         "        correct = 0\n",
         "        total = 0\n",
+        "        all_preds= []\n",
+        "        all_labels= []\n",
+        "\n",
         "        with torch.no_grad():\n",
         "            for batch in test_loader:\n",
         "                input_ids_batch, attention_mask_batch, labels_batch = [b.to(self.device) for b in batch]\n",
+        "\n",
         "                outputs = self.model(input_ids_batch, attention_mask=attention_mask_batch)\n",
         "                preds = torch.argmax(outputs.logits, dim=1)\n",
+        "                probs= torch.softmax(outputs.logits, dim=1)\n",
+        "\n",
+        "                all_preds.append(probs)\n",
+        "                all_labels.append(labels_batch)\n",
+        "\n",
         "                correct += torch.sum(preds == labels_batch).item()\n",
         "                total += len(labels_batch)\n",
+        "\n",
+        "        # Concatenate all predictions and labels\n",
+        "        all_preds = torch.cat(all_preds, dim=0)\n",
+        "        all_labels = torch.cat(all_labels, dim=0)\n",
+        "\n",
         "        accuracy = correct / total\n",
-        "        return accuracy\n",
+        "\n",
+        "        # Calculate F1-score\n",
+        "        f1 = self.calculate_f1_score(all_preds, all_labels)\n",
+        "\n",
+        "        return accuracy, f1, all_preds, all_labels\n",
+        "\n",
+        "    def calculate_f1_score(self, preds, labels):\n",
+        "        \"\"\"Calculate the F1-score for multi-class classification.\"\"\"\n",
+        "        preds = torch.argmax(preds, dim=1)\n",
+        "        tp = (preds == labels).sum().item()\n",
+        "        fp = (preds != labels).sum().item()\n",
+        "        fn = (labels != preds).sum().item()\n",
+        "\n",
+        "        precision = tp / (tp + fp) if (tp + fp) > 0 else 0\n",
+        "        recall = tp / (tp + fn) if (tp + fn) > 0 else 0\n",
+        "        f1 = 2 * (precision * recall) / (precision + recall) if (precision + recall) > 0 else 0\n",
+        "\n",
+        "        return f1\n",
+        "\n",
+        "    def plot_roc_curve(self, y_true, y_scores, n_classes):\n",
+        "        \"\"\"Plot the ROC curve for multi-class classification.\"\"\"\n",
+        "        fpr = dict()\n",
+        "        tpr = dict()\n",
+        "        roc_auc = dict()\n",
+        "\n",
+        "        # Compute ROC curve and ROC area for each class\n",
+        "        for i in range(n_classes):\n",
+        "            fpr[i], tpr[i], _ = roc_curve(y_true.cpu().numpy() == i, y_scores[:, i].cpu().numpy())\n",
+        "            roc_auc[i] = auc(fpr[i], tpr[i])\n",
+        "\n",
+        "        # Plot ROC curve\n",
+        "        plt.figure()\n",
+        "        for i in range(n_classes):\n",
+        "            plt.plot(fpr[i], tpr[i], label=f'Class {i} (AUC = {roc_auc[i]:.2f})')\n",
+        "\n",
+        "        plt.plot([0, 1], [0, 1], 'k--', label='Random Guess')\n",
+        "        plt.xlabel('False Positive Rate')\n",
+        "        plt.ylabel('True Positive Rate')\n",
+        "        plt.title('ROC Curve')\n",
+        "        plt.legend(loc=\"lower right\")\n",
+        "        plt.show()\n",
         "\n",
         "    def kfold_cross_validation(self, train_data):\n",
         "        \"\"\"Perform k-fold cross-validation on the provided dataset.\"\"\"\n",
@@ -151,6 +205,9 @@
         "        # Initialize KFold\n",
         "        kfold = KFold(n_splits=self.n_splits, shuffle=True, random_state=42)\n",
         "        accuracy_scores = []\n",
+        "        f1_scores = []\n",
+        "        all_preds = []\n",
+        "        all_labels = []\n",
         "\n",
         "        # Perform k-fold cross-validation\n",
         "        for fold, (train_idx, test_idx) in enumerate(kfold.split(input_ids)):\n",
@@ -163,27 +220,43 @@
         "            self.train_model(train_loader)\n",
         "\n",
         "            # Evaluate the model\n",
-        "            fold_accuracy = self.evaluate_model(test_loader)\n",
+        "            fold_accuracy, fold_f1, fold_preds, fold_labels = self.evaluate_model(test_loader)\n",
         "            accuracy_scores.append(fold_accuracy)\n",
+        "            f1_scores.append(fold_f1)\n",
+        "            all_preds.append(fold_preds)\n",
+        "            all_labels.append(fold_labels)\n",
+        "\n",
         "            print(f\"Validation Accuracy: {fold_accuracy:.4f}\")\n",
+        "            print(f\"Validation F1-Score: {fold_f1:.4f}\")\n",
         "            print('=' * 30)\n",
         "\n",
         "        # Calculate and print final results\n",
         "        accuracy_scores = torch.tensor(accuracy_scores)\n",
+        "        f1_scores = torch.tensor(f1_scores)\n",
         "        print(f\"Cross-validation accuracy scores: {accuracy_scores}\")\n",
         "        print(f\"Mean accuracy: {torch.mean(accuracy_scores):.4f}\")\n",
-        "        print(f\"Standard deviation: {torch.std(accuracy_scores):.4f}\")\n",
+        "        print(f\"Standard deviation (accuracy): {torch.std(accuracy_scores):.4f}\")\n",
+        "        print(f\"Cross-validation F1-scores: {f1_scores}\")\n",
+        "        print(f\"Mean F1-score: {torch.mean(f1_scores):.4f}\")\n",
+        "        print(f\"Standard deviation (F1-score): {torch.std(f1_scores):.4f}\")\n",
+        "\n",
+        "        # Concatenate predictions and labels from all folds\n",
+        "        all_preds = torch.cat(all_preds, dim=0)\n",
+        "        all_labels = torch.cat(all_labels, dim=0)\n",
+        "\n",
+        "        # Plot ROC curve\n",
+        "        n_classes = len(torch.unique(all_labels))\n",
+        "        self.plot_roc_curve(all_labels, all_preds, n_classes)\n",
         "\n",
         "        # Save the model\n",
         "        model_save_path = '/content/sentiment_analysis/sentiment_model_batch32_K5.pt'\n",
         "        torch.save(self.model, model_save_path)\n",
-        "        print(f\"Model saved to {model_save_path}!\")\n",
-        ""
+        "        print(f\"Model saved to {model_save_path}!\")"
       ],
       "metadata": {
         "id": "3pAxqrJbkVPU"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
