The Last Commit.

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNSHK9k9DTY/B9THYcMakcU",
+      "authorship_tag": "ABX9TyO47O6jTIBzdCpNfese2nNP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,10 +35,12 @@
         "import torch\n",
         "import pandas as pd\n",
         "from google.colab import userdata\n",
+        "import matplotlib.pyplot as plt\n",
+        "from torch.optim import AdamW\n",
         "from torch.utils.data import DataLoader, TensorDataset\n",
         "from sklearn.model_selection import KFold\n",
         "from sklearn.metrics import roc_curve, auc\n",
-        "from transformers import AutoTokenizer, AutoModelForSequenceClassification, AdamW\n",
+        "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
         "\n",
         "userdata.get('HF_TOKEN')\n",
         "\n",
@@ -118,7 +120,7 @@
         "                loss.backward()\n",
         "                self.optimizer.step()\n",
         "\n",
-        "                if (i + 1) % 1 == 0:\n",
+        "                if (i + 1) % 100 == 0:\n",
         "                    denominator = math.ceil(len(train_loader.dataset) / self.batch_size)\n",
         "                    print(f'[Epoch: {epoch + 1}] -> Batch: [{i + 1}/{denominator}]')\n",
         "\n",
@@ -268,12 +270,13 @@
         "    file_path = '/content/sentiment_analysis/twitter_train_corpus.csv'\n",
         "\n",
         "    # Constants\n",
-        "    nrows= 100\n",
+        "    nrows= None\n",
         "    N_SPLITS= 5 # k-fold\n",
         "    EPOCHS = 2\n",
-        "    BATCH_SIZE = 16\n",
+        "    BATCH_SIZE = 32\n",
         "\n",
         "    train_data = pd.read_csv(file_path, nrows= nrows) # Load your training data\n",
+        "    print(train_data.info())\n",
         "\n",
         "    # Initialize the SentimentAnalysisModel class\n",
         "    checkpoint= 'cardiffnlp/twitter-roberta-base-sentiment-latest'\n",
